update: 추가 기획안 백엔드 작업 완료
